# Procedural-Terrain-Generation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  todo.txt
graphicsExternal/glad/include/glad/: glad.h
graphicsExternal/glad/src/: glad.c
graphicsExternal/imgui/include/: imgui.h
graphicsExternal/imgui/src/backends/: imgui_impl_opengl3.cpp
include/: AppConfig.hpp  Fuse.hpp  PerlinAlgorithm.hpp  PerlinLayer.hpp  PerlinNoise.hpp  PerlinOOP.hpp  PerlinUtils.hpp  Renderer.hpp  RendererOOP.h  Terrain.hpp  Terrain3D.hpp  UserInterface.hpp
include/graphics/: Camera.hpp  Camera2D.hpp  Camera3D.hpp  EBO.hpp  Map.hpp  Mesh.hpp  ShaderClass.hpp  VAO.hpp  VBO.hpp
include/graphics/camera/: Camera.hpp  Camera2D.hpp  Camera3D.hpp
include/graphics/mesh/: EBO.hpp  Mesh.hpp
include/graphics/shader/: ShaderClass.hpp  ShaderManager.hpp
include/gui/: GUI.hpp  Window.hpp
include/json/: json.hpp
lib/: gtest.cmake
output/: hello.txt  output16x16x16.txt  output16x16x8.txt  output3x3.txt
shaders/: 2DShader.vert  Beach2D.vert  Beach2DShader.vert  Fjord.vert  GreenJungle.vert  Mono2DShader.vert  Mustafar.vert  Mustafar2D.vert  ShadowMovement.vert  Skye.vert  beachShader.vert  default.frag  default.vert  norway.vert  weirdShading.vert
src/: AppConfig.cpp  Fuse.cpp  PerlinAlgorithm.cpp  PerlinLayer.cpp  PerlinNoise.cpp  PerlinOOP.cpp  PerlinUtils.cpp  Renderer.cpp  RendererOOP.cpp  Terrain.cpp  Terrain3D.cpp  UserInterface.cpp  main.cpp  playground.cpp
src/graphics/: Camera.cpp  Camera2D.cpp  Camera3D.cpp  EBO.cpp  Map.cpp  Mesh.cpp  ShaderClass.cpp
src/graphics/camera/: Camera.cpp  Camera2D.cpp  Camera3D.cpp
src/graphics/mesh/: Mesh.cpp  VAO.cpp  VBO.cpp
src/graphics/shader/: ShaderClass.cpp  ShaderManager.cpp
src/gui/: GUI.cpp  Window.cpp
test/: testSprint1.cpp
